fixed mid aligning

--- a/main.css
+++ b/main.css
@@ -1,14 +1,17 @@
 body {
-    background-color: gainsboro;
+    background-color: rgb(161, 161, 169);
+    font-family: 'Varela Round', sans-serif;
 }
+/* Main DIV  */
 #main {
     width: 1000px;
     margin-left: calc( (100% - 1000px) / 2);
-    background-color: red;
     display: inline-block;
 }
+
+/* Sidebar */
 #side {
-    background-color: aqua;
+    background-color: white;
     display: inline-block;
     float: left;
     margin: 0;
@@ -19,53 +22,81 @@ body {
         text-decoration: none;
         text-transform: uppercase;
     }
+/* Social logos */
 footer {
 
 }
-main {
-    background-color: yellow;
+/* Middle, main page */
+#mid {
     display: inline-block;
-    float: left;
-    margin: 0;
     width: 750px;
+    height: 600px;
+    background: rgb(50,161,188);
+    background: linear-gradient(330deg, rgba(50,161,188,1) 0%, rgba(58,166,173,1) 50%, rgba(61,203,187,1) 100%);
+
 }
+main {
+    margin-top: 219px;
+    width: 100%;
+    text-align: center;
+    color: white;
+    
+}
+    main > div {
+        margin: 0 204px;
+        display: inline-block;
+
+    }
     main > div > img {
         display: inline-block;
         float: left;
     }
-    main > a {
-        padding: 10px;
-        float:left;
-        display: inline-block;
-        text-decoration: none;
-        text-align: center;
-        background-color: blue;
-    }
-#mid {
-    background-color: pink;
-    display: inline-block;
-    float: left;
-    margin-left: 215px;
 
-}
     h1 {
         display: inline-block;
         float: left;
-        font-size: 140px;
+        font-size: 130px;
         margin: 0;
-        line-height: 1em;
-        font-family: 'Varela Round', sans-serif;
+        padding-left: 5px;
+        padding-right: 5px;
+        line-height: 1.2em;
     }
+    
+main > a {
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-family: 'Varela Round', sans-serif;
+    color: white;
+    margin-top: 4em;
+    padding: 5px;
+    padding-left: 1em;
+    padding-right: 1em;
+    line-height: 33px;
+}
+main > a:hover {
+    background-color: #6EC7CF;
+    border-radius: 12px;
+}
+
 h4 {
-    float:left;
+    display: inline-block;
+    margin: 0px;
+    margin-top: 5px;
     width: 100%;
-    margin: 0;
-    text-align: center;
+    font-size: 18px;
 }
-h6 {
-    float:left;
+p {
+    display: inline-block;
     width: 100%;
+    margin-top: 5px;
+    font-size: 10px;
+    
+    /* jei padarau inline block - issiplecia main
+    display: inline-block; */
     margin: 0;
-    text-align: center;
+
 }
+
 
